@@ -1622,16 +1622,6 @@ div#mw-recreate-deleted-warn {
 div#mw-recreate-deleted-warn ul li {
 	font-size: 90%;
 }
-
-/**
- * Here is some stuff that's ACTUALLY COMMON TO ALL SKINS.
- * When the day comes, it can be moved to a *real* common.css.
- */
-.mw-plusminus-null { color: #aaa; }
-.texvc { direction: ltr; unicode-bidi: embed; }
-/* Stop floats from intruding into edit area in previews */
-#toolbar, #wpTextbox1 { clear: both; }
-
 .MediaTransformError {
 	background-color: #ccc;
 	padding: 0.1em;
