@@ -449,18 +449,3 @@ div.mw-recreate-deleted-control {
 	float: right;
 	font-size: 90%;
 }
-
-/**
- * Here is some stuff that's ACTUALLY COMMON TO ALL SKINS.
- * When the day comes, it can be moved to a *real* common.css.
- */
-.mw-plusminus-null { color: #aaa; }
-.texvc { direction: ltr; unicode-bidi: embed; }
-/* Stop floats from intruding into edit area in previews */
-#toolbar, #wpTextbox1 { clear: both; }
-
-/*
-#file img, .gallerybox .thumb img {
-	background: url(../common/images/Checker-16x16.png) repeat;
-}
-*/
